@@ -46,6 +46,12 @@ test {
     jvmArgs += ["--enable-preview"]
 }
 
+run {
+    maxHeapSize = "128m"
+    mainClass = "ru.vk.itmo.test.tuzikovalexandr.Server"
+    jvmArgs += ["--enable-preview"]
+}
+
 checkstyle {
     configFile = new File("checkstyle.xml")
     checkstyleTest.enabled = false
